5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4445/executions/1633_2927.log
== TEST (2019-04-02 18:10:27) 
-- CODE:
print=round(3*3.50*1.50)
total=
-- ERROR:
File "XXXX", line 2
    total=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:00) 
-- CODE:
(print)=round(3*3.50*1.50)
total=
-- ERROR:
File "XXXX", line 2
    total=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:33) 
-- CODE:
(print)=round(3*3.50*1.50)
total=round
-- ERROR:
File "XXXX", line 2
    total=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:11:37) 
-- CODE:
(print)=round(3*3.50*1.50)
total=round
-- EXECUTION TIME:
0.265331
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:

-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:

-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:53) 
-- CODE:
(num)=round(3*3.50*1.50)
total=round
-- ERROR:
File "XXXX", line 2
    total=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:14:02) 
-- CODE:
(print)=(input)(round(3*3.50*1.50)
total=round
-- ERROR:
File "XXXX", line 2
    total=round
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:14:20) 
-- CODE:
(print)=(input(3*3.50*1.50))
total=round
-- OUTPUT:
15.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:07) 
-- CODE:
(print)=(input(3*3.50*1.50))
total=8
-- OUTPUT:
15.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:35) 
-- CODE:
(print)=(input(3*3.50*1.50))
total(round)=8
-- ERROR:
File "XXXX", line 2
    total(round)=8
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:22:03) 
-- CODE:
esfirras(1)
soma_do_lanche = sum (esfirras)
print(soma_do_lanche)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    esfirras(1)
NameError: name 'esfirras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:22:19) 
-- CODE:
esfirras(1.50)
soma_do_lanche = sum (esfirras)
print(soma_do_lanche)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    esfirras(1.50)
NameError: name 'esfirras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:09) 
-- CODE:
esfirras(1.50)
soma_da_esfirra = sum (esfirras)
print(soma_da_esfirra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    esfirras(1.50)
NameError: name 'esfirras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:21) 
-- CODE:
esfirras(1.50*2)
soma_da_esfirra = sum (esfirras)
print(soma_da_esfirra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    esfirras(1.50*2)
NameError: name 'esfirras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:34) 
-- CODE:
esfirras(1.50*2)
soma_da_esfirra = sum (esfirras)
print(soma_da_esfirra)=total
-- ERROR:
File "XXXX", line 3
    print(soma_da_esfirra)=total
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:26:08) 
-- CODE:
esfirras(1.50)
soma_da_esfirra = sum (esfirras)
print(soma_da_esfirra)
total=1.50
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    esfirras(1.50)
NameError: name 'esfirras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:47) 
-- CODE:
valor_unit(1.50)
qtd_da_esfirra = round (esfirras)
print(qtd_da_esfirra)
total=1.50


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_unit(1.50)
NameError: name 'valor_unit' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:28:43) 
-- CODE:
valor_unit(1.50)
qtd_da_esfirra = round (esfirras)
print(qtd_da_esfirra)
total=1.50

valor_da_bebida
(print)=3.00

-- EXECUTION TIME:
0.147113
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2927/main.py", line 1, in <module>
    valor_unit(1.50)
NameError: name 'valor_unit' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
